plugins/tracker/www/themes/default/css/style.css
/* ... */
.tracker-admin-bindvalue_description {
    color:#666;
    font-size:0.9em;
    font-style:italic;
}
.tracker_formelement_label {
    font-weight: bold;
}

.tracker-admin-field-selected:hover,
.tracker-admin-field-selected {
    border: 1px solid #66C;
    background: #fcfcff;
    -webkit-box-shadow: 2px 2px 10px #ccc;
    -moz-box-shadow: 2px 2px 10px #ccc;
    box-shadow: 2px 2px 10px #ccc;
}
#tracker_report_renderers li.tracker_report_renderer_tab_table a {
    background-image: url(../images/ic/tracker_renderer_table-faded.png);
}
#tracker_report_renderers li.tracker_report_renderer_tab_table.tracker_report_renderers-current a {
    background-image: url(../images/ic/tracker_renderer_table.png);
}
li.tracker_report_table_add_column_used,
li.tracker_report_table_add_column_unused,
li.tracker_report_add_criteria_used,
li.tracker_report_add_criteria_unused,
li.tracker_aggregate_function_add_used,
li.tracker_aggregate_function_add_unused {
    padding-left:20px;
    cursor:pointer;
    background-position:top left;
    background-repeat:no-repeat;
}
li.tracker_report_table_add_column_used,
li.tracker_report_add_criteria_used,
li.tracker_aggregate_function_add_used {
    background-image:url(../images/ic/tick.png);
}
li.tracker_report_table_add_column_unused,
li.tracker_report_add_criteria_unused,
li.tracker_aggregate_function_add_unused {
    background-image:url(../images/ic/bullet_grey.png);
}
li.tracker_report_table_add_column_waiting,
li.tracker_report_add_criteria_waiting,
li.tracker_aggregate_function_add_waiting {
    background-image:url(../images/ic/spinner.gif);
    background-position:center left;
}
li.tracker_report_table_add_column_unused:hover,
li.tracker_report_add_criteria_unused:hover,
li.tracker_aggregate_function_add_unused:hover {
    background-image:url(../images/ic/bullet_green.png);
}
li.tracker_report_table_add_column_used:hover,
li.tracker_report_add_criteria_used:hover,
li.tracker_aggregate_function_add_used:hover {
    background-image:url(../images/ic/tick-grey.png);
}
li.tracker_report_table_add_column_used:hover,
li.tracker_report_table_add_column_unused:hover,
li.tracker_report_add_criteria_used:hover,
li.tracker_report_add_criteria_unused:hover,
li.tracker_aggregate_function_add_used:hover,
li.tracker_aggregate_function_add_unused:hover {
    background-color:#eef;
}
#tracker_report_addcriteria_panel {
    float:right;
}
#tracker_renderer_options {
    font-weight:normal;
    float:right;
    z-index: 150;
}
#tracker_renderer_options_menu_handle {
    font-size:0.8em; 
}
a.tracker_report_table_column_title {
    padding-left:20px;
}
a.tracker_report_table_column_title:hover {
    cursor: move;
}
a.tracker_report_table_column_title:hover span {
    cursor: pointer;
}

div.tracker_report_table_hide_masschange #tracker_report_table_masschange_form,
div.tracker_report_table_hide_masschange .tracker_report_table_masschange {
    display:none;
}
div.tracker_report_table_show_masschange #tracker_report_table_next_previous_form,
div.tracker_report_table_show_masschange #tracker_report_table_masschange_form,
div.tracker_report_table_show_masschange .tracker_report_table_masschange:not([class~=boxtitle]) {
    background: #ffC;
}

#tracker_workflow_matrix .pc_check_unchecked,
#tracker_field_dependencies_matrix .pc_check_unchecked {
    background-image: url(../images/ic/bullet_grey.png);
}
#tracker_workflow_matrix .pc_check_checked,
#tracker_field_dependencies_matrix .pc_check_checked {
    background-image: url(../images/ic/arrow-turn-090-left.png);
}

.workflow_actions .pc_check_unchecked {
    background-image: url(/themes/common/images/ic/bin_closed.png);
}
.workflow_actions .pc_check_checked {
    background-image: url(/themes/common/images/ic/bin.png);
}

.workflow_transitions,
.workflow_rules {
    display: inline-block;
}

.workflow_existing_rules {
    list-style: none;
    padding-left: 0;
}
.workflow_rule {
    clear: both;
    margin: 5px 0px;
}
.workflow_existing_rules .pc_check_unchecked {
    background-image: url(/themes/common/images/ic/bin_closed.png);
    float: right;
}
.workflow_existing_rules .pc_check_checked {
    background-image: url(/themes/common/images/ic/bin.png);
    float: right;
}
.workflow_action.deleted,
.workflow_rule.deleted {
    text-decoration: line-through;
}
.add_new_rule {
    line-height:2em;
}
.workflow_actions, .workflow_conditions  {
    list-style-type: none;
}
.workflow_rule,
.workflow_action {
    padding: 1em 2em 1em 3em;
    border: 1px solid #ccc;
    border-radius: 0.5em;
    background-color: #F6F6F6;
    background-position: 1em 1em;
    background-repeat: no-repeat;
}
.workflow_action_field {
    background-image: url(../images/ic/ui-text-field-change.png);
}
.workflow_action_ci_build {
    background-image: url(../images/ic/ci_build/server.png);
}
.workflow_conditions_perms {
    list-style-image: url(/themes/common/images/ic/lock.png);
}
.workflow_conditions_notempty {
    list-style-image: url(../images/ic/ui-text-field--exclamation-red.png);
}
/* }}} */

/* {{{ Palette */
.tracker-admin-palette,
#tracker-admin-field-properties {
    
}
#tracker-admin-field-properties {
    background: #fcfcff;
}

.tracker-admin-palette button img,
.tracker-admin-palette a.button img {
    vertical-align:middle;
    margin-right:0.5em;
}
/* ... */

